--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native": "^5.9.2",
     "@react-navigation/stack": "^5.14.1",
     "expo": "~40.0.0",
+    "expo-image-picker": "^10.0.0",
     "expo-status-bar": "~1.0.3",
     "galio-framework": "^0.7.1",
     "native-base": "^2.15.2",
@@ -26,6 +27,7 @@
     "react-native-dialog-input": "^1.0.8",
     "react-native-elements": "^3.1.0",
     "react-native-gesture-handler": "^1.8.0",
+    "react-native-image-picker": "^3.1.4",
     "react-native-reanimated": "^1.13.2",
     "react-native-router-flux": "^4.2.0",
     "react-native-safe-area-context": "^3.1.9",
